feat: ticket logic pre init
